fix: fixing some layout issues with the page action bar and navigation

--- a/src/frontend/src/components/PageActionBar.module.css
+++ b/src/frontend/src/components/PageActionBar.module.css
@@ -1,8 +1,6 @@
 .wrapper {
-  position: fixed;
+  position: sticky;
   top: 0;
-  left: 0;
-  right: 0;
   display: flex;
   z-index: 1000;
   justify-content: space-between;
